Fixed nav background color in dark mode

--- a/css.css
+++ b/css.css
@@ -117,6 +117,10 @@ img {
     background-color: white;
 }
 
+.invert nav {
+    filter: invert(100%);
+}
+
 btn {
 
     background: transparent;
